...
        }
      }
    },
    "今日完成率" : {

    },
    "今日已处理" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Handled Today"
          }
...
    "信息仍需补全" : {

    },
    "信息可继续补全" : {

    },
    "修改疗程与提醒" : {

    },
    "修改药品" : {

    },
    "修改药品信息" : {
...
    "去今日页处理" : {

    },
    "参考线" : {

    },
    "取消" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
    "已折叠" : {

    },
    "已撤销" : {

    },
    "已服用" : {

    },
    "已查看，仍需关注" : {

    },
    "已核对，保存" : {

    },
    "已生成" : {

    },
    "已解除归档" : {
...
    "智能体运行方式" : {

    },
    "暂不可用" : {

    },
    "暂不开启" : {

    },
    "暂无" : {

    },
    "暂无剂量变化记录。" : {
...
    "界面元素示例" : {

    },
    "疗程" : {

    },
    "疗程与提醒" : {

    },
    "疗程开始" : {

    },
    "疗程结束" : {
...
    "药品信息" : {

    },
    "药品分组" : {

    },
    "药品名称" : {

    },
    "药品名称、规格和来源" : {

    },
    "药品总览" : {

    },
    "药品状态" : {

    },
    "药品详情" : {

    },
    "药品资料" : {

    },
    "药盒 %@ %@" : {
...
